--- a/index.html
+++ b/index.html
@@ -133,11 +133,7 @@
                 <img src="./images/user2.jpg" alt="">
                 <div>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Magnam dolorem eaque cupiditate facere? Minima 
-                         repudiandae ipsam aperiam ullam quae necessitatibus 
-                         laborum voluptas adipisci, et temporibus explicabo. 
-                         Suscipit nam accusamus illo.
+                        Welcome to codegen
                     </p>
                     <h3>Parth</h3>
                 </div>
