--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </li><li>
                         <a href="">Courses</a>
                     </li><li>
-                        <a href="">Contact Us</a>
+                        <a href="./contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
